# Rust_EFM32

./: Cargo.toml  openocd.cfg  openocd.gdb
src/: gpio.rs  main.rs
